change index.html and rename a.html to about.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h4>2323</h4>
     <h5>test</h5>
     <br>
-    <a href="a.html">about</a>
+    <a href="about.html">about</a>
 </body>
 </html>
